@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Update Prototypes policy to recognize more ways of activating the signatures feature
 
 0.025     2018-02-11 01:31:58 EST
   - Fix DeprecatedFeatures to recognize correctly-parsed postderef in PPI 1.237+
